feat: add feedback translation
